--- a/fr/philosophy.html
+++ b/fr/philosophy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
   <!-- _includes/head.html -->
 <head>
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Philosophy - OmegaT</title>
+  <title>Philosophie - OmegaT</title>
   
   <link rel="shortcut icon" type="image/x-icon" href="/omegat-website/favicon.png">
   
@@ -20,8 +20,8 @@
 
   <meta name="description" content="OmegaT is a free translation memory application written in Java. It is a tool intended for professional translators.">
 
-  <link rel="canonical" href="http://localhost:4000/omegat-website/philosophy.html">
-  <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Translation Memory Tool" href="/omegat-website/feed.xml">
+  <link rel="canonical" href="http://localhost:4000/omegat-website/fr/philosophy.html">
+  <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Translation Memory Tool" href="/omegat-website/fr/feed.xml">
   
   
 </head>
@@ -40,23 +40,23 @@
             <span class="icon-bar"/>
             <span class="icon-bar"/>
           </button>
-          <a class="navbar-brand" href="/omegat-website/">
+          <a class="navbar-brand" href="/omegat-website/fr/">
             <img alt="OmegaT" class="logo-omegat" src="/omegat-website/img/omegat.svg" height="80" width="80"/>
           </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="download">Download</a></li>
+            <li><a href="download">Télécharger</a></li>
           </ul>
           <ul class="nav navbar-nav">
             <li><a href="contact">Contact</a></li>
-            <li><a href="resources">Resources</a></li>
-            <li><a href="about">About</a></li>
+            <li><a href="resources">Ressources</a></li>
+            <li><a href="about">À propos</a></li>
           </ul>
           <ul class="nav navbar-nav">
             <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Languages<span class="caret"/> <span class="sr-only">(current)</span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Langues<span class="caret"/> <span class="sr-only">(current)</span></a>
               <ul class="dropdown-menu languages">
                 <li><a href="/omegat-website/ar/">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
                 <li><a href="/omegat-website/ca/">Catal&#xE0;</a></li>
@@ -145,9 +145,10 @@
     </nav>
 
 
-    <div class="jumbotron jumbo-page titles-philosophy"><h1>Philosophy</h1></div>
+    <div class="jumbotron jumbo-page titles-philosophy"><h1>Philosophie</h1></div>
         
     <div class="container">
+<h2>Philosophy</h2>
 
 <h3>The open-source philosophy</h3>
 
@@ -159,25 +160,70 @@
 
 <h3>The OmegaT project philosophy</h3>
 
-<p>The same spirit can be found within the OmegaT project. Users are free to download and use the program. In turn, they are free, and indeed encouraged (but not obliged in any way) to contribute back to the project. How they do so is very much up to them. For example, there is nothing to stop a user writing their own user manual or a demonstration video for OmegaT, and if the project considers it remotely useful, it is likely to be made available to OmegaT's community of users. Where routine tasks are concerned, volunteers working on the OmegaT project are generally given as much freedom as possible in determining the form of their contribution. This hands-off approach is described by the current OmegaT project co-ordinator as "delegated anarchy".</p>
+<p>The same spirit can be found within the OmegaT project. Users are free to
+download and use the program. In turn, they are free, and indeed encouraged
+(but not obliged in any way) to contribute back to the project. How they do so
+is very much up to them. For example, there is nothing to stop a user writing
+their own user manual or a demonstration video for OmegaT, and if the project
+considers it remotely useful, it is likely to be made available to OmegaT's
+community of users. Where routine tasks are concerned, volunteers working on
+the OmegaT project are generally given as much freedom as possible in
+determining the form of their contribution. This hands-off approach is
+described by the current OmegaT project co-ordinator as "delegated
+anarchy".</p>
 
-<p>In some areas, some degree of co-ordination is required. For example, anyone is free to make changes to OmegaT's program code and to submit these changes to the development team. Only if they are considered beneficial for OmegaT's users, however, will the development team include them in OmegaT. This ensures that the users' interests are protected, and has also resulted in OmegaT being awarded the   <a href="http://mac.softpedia.com/get/Word-Processing/OmegaT.shtml">Softpedia "100% FREE" guarantee</a>.</p><br/>
+<p>In some areas, some degree of co-ordination is required. For example, anyone
+is free to make changes to OmegaT's program code and to submit these changes to
+the development team. Only if they are considered beneficial for OmegaT's
+users, however, will the development team include them in OmegaT. This ensures
+that the users' interests are protected, and has also resulted in OmegaT being
+awarded the   <a href="http://mac.softpedia.com/get/Word-Processing/OmegaT.shtml">Softpedia
+"100% FREE" guarantee</a>.</p><br/>
 
 <h3>Development of OmegaT</h3>
 
-<p>As elsewhere in the OmegaT project, the work of programming OmegaT is done by volunteers, and in keeping with the project philosophy, the developments and improvements they make to OmegaT are ultimately at their discretion. There is however considerable scope within the project for users to suggest improvements and influence the course of future development.</p>
+<p>As elsewhere in the OmegaT project, the work of programming OmegaT is done
+by volunteers, and in keeping with the project philosophy, the developments and
+improvements they make to OmegaT are ultimately at their discretion. There is
+however considerable scope within the project for users to suggest improvements
+and influence the course of future development.</p>
 
-<p>The first of these is the <a href="http://groups.yahoo.com/group/omegat">OmegaT user group</a>. This is the main focus of the OmegaT user community. New users of OmegaT are encouraged to make any suggestions here. One reason for this is that the desired function may already have been implemented, or that there may be reasons why it cannot be implemented. Convenient alternative functions or solutions may also exist.</p>
+<p>The first of these is the <a
+        href="http://groups.yahoo.com/group/omegat">OmegaT user group</a>. This
+is the main focus of the OmegaT user community. New users of OmegaT are
+encouraged to make any suggestions here. One reason for this is that the
+desired function may already have been implemented, or that there may be
+reasons why it cannot be implemented. Convenient alternative functions or
+solutions may also exist.</p>
 
-<p>Detailed technical discussion of changes is best conducted directly with OmegaT's developers. For this purpose, a dedicated <a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">developers' mailing list</a> exists.</p>
+<p>Detailed technical discussion of changes is best conducted directly with
+OmegaT's developers. For this purpose, a dedicated <a
+href="https://lists.sourceforge.net/lists/listinfo/omegat-development">developers'
+mailing list</a> exists.</p>
 
-<p>Once a user has formulated a proposed change or enhancement to OmegaT, a defined procedure exists for its submission to the development team for consideration. This enables the numerous suggestions to be managed more easily. The procedure is termed an <a href="https://sourceforge.net/p/omegat/feature-requests/">"RFE" (Request for Feature Enhancement) and is managed here</a>.</p>
+<p>Once a user has formulated a proposed change or enhancement to OmegaT, a
+defined procedure exists for its submission to the development team for
+consideration. This enables the numerous suggestions to be managed more easily.
+The procedure is termed an <a
+href="https://sourceforge.net/p/omegat/feature-requests/">"RFE" (Request for
+Feature Enhancement) and is managed here</a>.</p>
 
-<p>Literally hundreds of RFEs have already been made, and many of them already implemented. However, submission of an RFE does not mean that the desired feature or improvement will automatically be implemented. Whether or not it is adopted depends firstly upon whether the development team considers it beneficial to OmegaT, and secondly, upon whether one of the developers is willing to do the work of implementing it. </p>
+<p>Literally hundreds of RFEs have already been made, and many of them already
+implemented. However, submission of an RFE does not mean that the desired
+feature or improvement will automatically be implemented. Whether or not it is
+adopted depends firstly upon whether the development team considers it
+beneficial to OmegaT, and secondly, upon whether one of the developers is
+willing to do the work of implementing it. </p>
 
-<p>OmegaT's developers, who are all volunteers, may be more willing to implement an RFE if the development work is funded by the requester. <a href="sponsorship.html">Sponsorship of development has already resulted in the addition of certain features.</a> If you are willing to finance the work of implementing your desired feature, please contact the development team privately for a quotation. It may also be possible for developments commissioned from external developers to be implemented within OmegaT. As with free developments, however, the principle still applies that any changes to OmegaT must be beneficial to the application and its users.</p>
-
-
+<p>OmegaT's developers, who are all volunteers, may be more willing to
+implement an RFE if the development work is funded by the requester. <a
+href="sponsorship.html">Sponsorship of development has already resulted in the
+addition of certain features.</a> If you are willing to finance the work of
+implementing your desired feature, please contact the development team
+privately for a quotation. It may also be possible for developments
+commissioned from external developers to be implemented within OmegaT. As with
+free developments, however, the principle still applies that any changes to
+OmegaT must be beneficial to the application and its users.</p>
 </div>
 
 
@@ -190,7 +236,7 @@
   <div class="container-fluid">
           <div class="row">
           <div class="col-sm-2 social-links">
-    <h4>Connect</h4>
+    <h4>Réseaux sociaux</h4>
     <ul>
       <li><a href="https://sourceforge.net/projects/omegat/"><img       src="/omegat-website/img/sourceforge.svg" height="24"/> Sourceforge</a></li>
       <li><a href="github.com/omegat-org/"><img                         src="/omegat-website/img/github.svg" height="24"/> Github</a></li>
@@ -200,7 +246,7 @@
   </div>
   </div>
   </div>
-  <p>Copyright &#xA9; 2017 - <a href="/omegat-website">omegat.org</a></p>
+  <p>Copyright &#xA9; 2017 - <a href="/omegat-website/fr">omegat.org</a></p>
 </footer>
 
 
