--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,233 @@
----
-layout: page
-title: titles.contact
----
-{% translate_file contact.html %}
+<!DOCTYPE html>
+<html lang="en">
+
+  <!-- _includes/head.html -->
+<head>
+  <meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+  <title>Contact - OmegaT</title>
+  
+  <link rel="shortcut icon" type="image/x-icon" href="/omegat-website/favicon.png">
+  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="/omegat-website/css/omegat.css"/>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="/omegat-website/js/omegat.js"></script>
+
+  <meta name="description" content="OmegaT is a free translation memory application written in Java. It is a tool intended for professional translators.">
+
+  <link rel="canonical" href="http://localhost:4000/omegat-website/contact.html">
+  <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Translation Memory Tool" href="/omegat-website/feed.xml">
+  
+  
+</head>
+
+
+
+  <body id="page">
+
+        <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"/>
+            <span class="icon-bar"/>
+            <span class="icon-bar"/>
+          </button>
+          <a class="navbar-brand" href="/omegat-website/">
+            <img alt="OmegaT" class="logo-omegat" src="/omegat-website/img/omegat.svg" height="80" width="80"/>
+          </a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="download">Download</a></li>
+          </ul>
+          <ul class="nav navbar-nav">
+            <li><a href="contact">Contact</a></li>
+            <li><a href="resources">Resources</a></li>
+            <li><a href="about">About</a></li>
+          </ul>
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Languages<span class="caret"/> <span class="sr-only">(current)</span></a>
+              <ul class="dropdown-menu languages">
+                <li><a href="/omegat-website/ar/">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
+                <li><a href="/omegat-website/ca/">Catal&#xE0;</a></li>
+                <li><a href="/omegat-website/cz/">&#x10C;e&#x161;tina</a></li>
+                <li><a href="/omegat-website/de/">Deutsch</a></li>
+                <li><a href="/omegat-website/el/">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
+                <li><a href="/omegat-website/"   >English</a></li>
+                <li><a href="/omegat-website/es/">Espa&#xF1;ol</a></li>
+                <li><a href="/omegat-website/fr/">Fran&#xE7;ais</a></li>
+                <li><a href="/omegat-website/gl/">Galego</a></li>
+                <li><a href="/omegat-website/id/">Bahasa Indonesia</a></li>
+                <li><a href="/omegat-website/ia/">Interlingua</a></li>
+                <li><a href="/omegat-website/it/">Italiano</a></li>
+                <li><a href="/omegat-website/ko/">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
+                <li><a href="/omegat-website/hu/">Magyar</a></li>
+                <li><a href="/omegat-website/ja/">&#x65E5;&#x672C;&#x8A9E;</a></li>
+                <li><a href="/omegat-website/nl/">Nederlands</a></li>
+                <li><a href="/omegat-website/pl/">Polski</a></li>
+                <li><a href="/omegat-website/br/">Portugu&#xEA;s (Brazil)</a></li>
+                <li><a href="/omegat-website/pt/">Portugu&#xEA;s (Portugal)</a></li>
+                <li><a href="/omegat-website/ru/">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
+                <li><a href="/omegat-website/sq/">Shqip</a></li>
+                <li><a href="/omegat-website/sk/">Sloven&#x10D;ina</a></li>
+                <li><a href="/omegat-website/si/">Sloven&#x161;&#x10D;ina</a></li>
+                <li><a href="/omegat-website/hr/">Srpskohrvatski</a></li>
+                <li><a href="/omegat-website/fi/">Suomi</a></li>
+                <li><a href="/omegat-website/sv/">Svenska</a></li>
+                <li><a href="/omegat-website/zh_CN/">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
+                <li><a href="/omegat-website/zh_TW/">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
+              </ul>
+            </li>
+            <!--
+            <li>
+              <a href="#page-download">Download v.<span id="last-version">4.1.1</span></a>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"/></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Action</a>
+                </li>
+                <li>
+                  <a href="#">Another action</a>
+                </li>
+                <li>
+                  <a href="#">Something else here</a>
+                </li>
+                <li role="separator" class="divider"/>
+                <li>
+                  <a href="#">Separated link</a>
+                </li>
+                <li role="separator" class="divider"/>
+                <li>
+                  <a href="#">One more separated link</a>
+                </li>
+              </ul>
+            </li>
+            -->
+          </ul>
+          <!--
+          <form class="navbar-form navbar-left">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search"/>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="#">Link</a>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"/></a>
+              <ul class="dropdown-menu">
+                <li role="separator" class="divider"/>
+                <li>
+                  <a href="#">Separated link</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          -->
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+    </nav>
+
+
+    <div class="jumbotron jumbo-page titles-contact"><h1>Contact</h1></div>
+        
+    <div class="container">
+  <h3>User group</h3>
+  <p>OmegaT has a very active, supportive and multilingual user group <a href="http://groups.yahoo.com/group/omegat">here</a>,
+which users are strongly encouraged to join. The user group also serves
+as the main point of contact between users and the project team.</p>
+  <br/>
+  <h3>Mailing lists</h3>
+  <p>OmegaT also has the following mailing lists and trackers, which are hosted on Sourceforge:</p>
+  <table>
+    <tbody>
+      <tr>
+        <td>
+          <a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">OmTdev</a>
+        </td>
+        <td>The OmegaT developers' list. This list is for more technical
+            discussion of features and development, and is intended for
+            OmegaT developers and other interested parties.</td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://lists.sourceforge.net/lists/listinfo/omegat-l10n">OmT-l10n</a>
+        </td>
+        <td>This mailing list is for localizers of OmegaT.</td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h3>Tracking system</h3>
+  <p>Bugs, feature requests and documentation issues are handled on
+Sourceforge by the following tracking systems. Please do not use these
+tracking systems before first raising the issue on the user group
+and/or mailing lists.</p>
+  <table>
+    <tbody>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/bugs/">Issues/bugs tracking system</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/feature-requests/">Feature requests tracking system</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/documentation/">Documentation tracking system</a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h3>Administration</h3>
+  <p>Please contact the <a href="mailto:lin4trans@users.sourceforge.net">OmegaT project co-ordinator</a> regarding any administration issues.</p>
+</div>
+
+
+
+
+    <footer class="container-fluid text-center">
+  <a href="#page" title="To Top">
+    <span class="glyphicon glyphicon-chevron-up"/>
+  </a>
+  <div class="container-fluid">
+          <div class="row">
+          <div class="col-sm-2 social-links">
+    <h4>Connect</h4>
+    <ul>
+      <li><a href="https://sourceforge.net/projects/omegat/"><img       src="/omegat-website/img/sourceforge.svg" height="24"/> Sourceforge</a></li>
+      <li><a href="github.com/omegat-org/"><img                         src="/omegat-website/img/github.svg" height="24"/> Github</a></li>
+      <li><a href="https://twitter.com/OmegaTOfficial"><img             src="/omegat-website/img/twitter.svg" height="24"/> Twitter</a></li>
+      <li><a href="https://www.facebook.com/OmegaTOfficial"><img        src="/omegat-website/img/facebook.svg" height="24"/> Facebook</a></li>
+    </ul>
+  </div>
+  </div>
+  </div>
+  <p>Copyright &#xA9; 2017 - <a href="/omegat-website">omegat.org</a></p>
+</footer>
+
+
+  </body>
+
+</html>
 
