--- a/fr/contact.html
+++ b/fr/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
   <!-- _includes/head.html -->
 <head>
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Philosophy - OmegaT</title>
+  <title>Contact - OmegaT</title>
   
   <link rel="shortcut icon" type="image/x-icon" href="/omegat-website/favicon.png">
   
@@ -20,8 +20,8 @@
 
   <meta name="description" content="OmegaT is a free translation memory application written in Java. It is a tool intended for professional translators.">
 
-  <link rel="canonical" href="http://localhost:4000/omegat-website/philosophy.html">
-  <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Translation Memory Tool" href="/omegat-website/feed.xml">
+  <link rel="canonical" href="http://localhost:4000/omegat-website/fr/contact.html">
+  <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Translation Memory Tool" href="/omegat-website/fr/feed.xml">
   
   
 </head>
@@ -40,23 +40,23 @@
             <span class="icon-bar"/>
             <span class="icon-bar"/>
           </button>
-          <a class="navbar-brand" href="/omegat-website/">
+          <a class="navbar-brand" href="/omegat-website/fr/">
             <img alt="OmegaT" class="logo-omegat" src="/omegat-website/img/omegat.svg" height="80" width="80"/>
           </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="download">Download</a></li>
+            <li><a href="download">Télécharger</a></li>
           </ul>
           <ul class="nav navbar-nav">
             <li><a href="contact">Contact</a></li>
-            <li><a href="resources">Resources</a></li>
-            <li><a href="about">About</a></li>
+            <li><a href="resources">Ressources</a></li>
+            <li><a href="about">À propos</a></li>
           </ul>
           <ul class="nav navbar-nav">
             <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Languages<span class="caret"/> <span class="sr-only">(current)</span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Langues<span class="caret"/> <span class="sr-only">(current)</span></a>
               <ul class="dropdown-menu languages">
                 <li><a href="/omegat-website/ar/">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
                 <li><a href="/omegat-website/ca/">Catal&#xE0;</a></li>
@@ -145,39 +145,64 @@
     </nav>
 
 
-    <div class="jumbotron jumbo-page titles-philosophy"><h1>Philosophy</h1></div>
+    <div class="jumbotron jumbo-page titles-contact"><h1>Contact</h1></div>
         
-    <div class="container">
-
-<h3>The open-source philosophy</h3>
-
-<p>OmegaT is an open-source application and project. This means that the source code of the OmegaT program is freely available, and that OmegaT's license gives its users considerable freedom in its use. Not only may it be used free of charge, users are also free to make copies of it and distribute them. </p>
-
-<p>An important aspect of this freedom is that users may also modify the program's code. To the open-source movement, the freedom that users have to change the program to suit their own needs is more important than the fact that they do not have to pay for it. This is described as "free as in speech", in contrast to "free as in beer".
-
-</p><br/>
-
-<h3>The OmegaT project philosophy</h3>
-
-<p>The same spirit can be found within the OmegaT project. Users are free to download and use the program. In turn, they are free, and indeed encouraged (but not obliged in any way) to contribute back to the project. How they do so is very much up to them. For example, there is nothing to stop a user writing their own user manual or a demonstration video for OmegaT, and if the project considers it remotely useful, it is likely to be made available to OmegaT's community of users. Where routine tasks are concerned, volunteers working on the OmegaT project are generally given as much freedom as possible in determining the form of their contribution. This hands-off approach is described by the current OmegaT project co-ordinator as "delegated anarchy".</p>
-
-<p>In some areas, some degree of co-ordination is required. For example, anyone is free to make changes to OmegaT's program code and to submit these changes to the development team. Only if they are considered beneficial for OmegaT's users, however, will the development team include them in OmegaT. This ensures that the users' interests are protected, and has also resulted in OmegaT being awarded the   <a href="http://mac.softpedia.com/get/Word-Processing/OmegaT.shtml">Softpedia "100% FREE" guarantee</a>.</p><br/>
-
-<h3>Development of OmegaT</h3>
-
-<p>As elsewhere in the OmegaT project, the work of programming OmegaT is done by volunteers, and in keeping with the project philosophy, the developments and improvements they make to OmegaT are ultimately at their discretion. There is however considerable scope within the project for users to suggest improvements and influence the course of future development.</p>
-
-<p>The first of these is the <a href="http://groups.yahoo.com/group/omegat">OmegaT user group</a>. This is the main focus of the OmegaT user community. New users of OmegaT are encouraged to make any suggestions here. One reason for this is that the desired function may already have been implemented, or that there may be reasons why it cannot be implemented. Convenient alternative functions or solutions may also exist.</p>
-
-<p>Detailed technical discussion of changes is best conducted directly with OmegaT's developers. For this purpose, a dedicated <a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">developers' mailing list</a> exists.</p>
-
-<p>Once a user has formulated a proposed change or enhancement to OmegaT, a defined procedure exists for its submission to the development team for consideration. This enables the numerous suggestions to be managed more easily. The procedure is termed an <a href="https://sourceforge.net/p/omegat/feature-requests/">"RFE" (Request for Feature Enhancement) and is managed here</a>.</p>
-
-<p>Literally hundreds of RFEs have already been made, and many of them already implemented. However, submission of an RFE does not mean that the desired feature or improvement will automatically be implemented. Whether or not it is adopted depends firstly upon whether the development team considers it beneficial to OmegaT, and secondly, upon whether one of the developers is willing to do the work of implementing it. </p>
-
-<p>OmegaT's developers, who are all volunteers, may be more willing to implement an RFE if the development work is funded by the requester. <a href="sponsorship.html">Sponsorship of development has already resulted in the addition of certain features.</a> If you are willing to finance the work of implementing your desired feature, please contact the development team privately for a quotation. It may also be possible for developments commissioned from external developers to be implemented within OmegaT. As with free developments, however, the principle still applies that any changes to OmegaT must be beneficial to the application and its users.</p>
-
-
+    <?xml version="1.0"?>
+<div class="container">
+  <h2>Contact and support</h2>
+  <h3>User group</h3>
+  <p>OmegaT has a very active, supportive and multilingual user group <a href="http://groups.yahoo.com/group/omegat">here</a>,
+which users are strongly encouraged to join. The user group also serves
+as the main point of contact between users and the project team.</p>
+  <br/>
+  <h3>Mailing lists</h3>
+  <p>OmegaT also has the following mailing lists and trackers, which are hosted on Sourceforge:</p>
+  <table>
+    <tbody>
+      <tr>
+        <td>
+          <a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">OmTdev</a>
+        </td>
+        <td>The OmegaT developers' list. This list is for more technical
+            discussion of features and development, and is intended for
+            OmegaT developers and other interested parties.</td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://lists.sourceforge.net/lists/listinfo/omegat-l10n">OmT-l10n</a>
+        </td>
+        <td>This mailing list is for localizers of OmegaT.</td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h3>Tracking system</h3>
+  <p>Bugs, feature requests and documentation issues are handled on
+Sourceforge by the following tracking systems. Please do not use these
+tracking systems before first raising the issue on the user group
+and/or mailing lists.</p>
+  <table>
+    <tbody>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/bugs/">Issues/bugs tracking system</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/feature-requests/">Feature requests tracking system</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/documentation/">Documentation tracking system</a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h3>Administration</h3>
+  <p>Please contact the <a href="mailto:lin4trans@users.sourceforge.net">OmegaT project co-ordinator</a> regarding any administration issues.</p>
 </div>
 
 
@@ -190,7 +215,7 @@
   <div class="container-fluid">
           <div class="row">
           <div class="col-sm-2 social-links">
-    <h4>Connect</h4>
+    <h4>Réseaux sociaux</h4>
     <ul>
       <li><a href="https://sourceforge.net/projects/omegat/"><img       src="/omegat-website/img/sourceforge.svg" height="24"/> Sourceforge</a></li>
       <li><a href="github.com/omegat-org/"><img                         src="/omegat-website/img/github.svg" height="24"/> Github</a></li>
@@ -200,7 +225,7 @@
   </div>
   </div>
   </div>
-  <p>Copyright &#xA9; 2017 - <a href="/omegat-website">omegat.org</a></p>
+  <p>Copyright &#xA9; 2017 - <a href="/omegat-website/fr">omegat.org</a></p>
 </footer>
 
 
