--- a/index.html
+++ b/index.html
@@ -1,9 +1,409 @@
---- 
-layout: home
-namespace: index
-title: titles.home
+<!DOCTYPE html>
+<html lang="en">
 
-permalink: /
---- 
-{% translate_file index.html %}
+  <!-- _includes/head.html -->
+<head>
+  <meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+  <title>OmegaT - The Free Translation Memory Tool - OmegaT</title>
+  
+  <link rel="shortcut icon" type="image/x-icon" href="/omegat-website/favicon.png">
+  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="/omegat-website/css/omegat.css"/>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="/omegat-website/js/omegat.js"></script>
+
+  <meta name="description" content="OmegaT is a free translation memory application written in Java. It is a tool intended for professional translators.">
+
+  <link rel="canonical" href="http://localhost:4000/omegat-website/">
+  <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Translation Memory Tool" href="/omegat-website/feed.xml">
+  
+  
+</head>
+
+
+
+  <body id="page">
+
+        <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"/>
+            <span class="icon-bar"/>
+            <span class="icon-bar"/>
+          </button>
+          <a class="navbar-brand" href="/omegat-website/">
+            <img alt="OmegaT" class="logo-omegat" src="/omegat-website/img/omegat.svg" height="80" width="80"/>
+          </a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="download">Download</a></li>
+          </ul>
+          <ul class="nav navbar-nav">
+            <li><a href="contact">Contact</a></li>
+            <li><a href="resources">Resources</a></li>
+            <li><a href="about">About</a></li>
+          </ul>
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Languages<span class="caret"/> <span class="sr-only">(current)</span></a>
+              <ul class="dropdown-menu languages">
+                <li><a href="/omegat-website/ar/">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
+                <li><a href="/omegat-website/ca/">Catal&#xE0;</a></li>
+                <li><a href="/omegat-website/cz/">&#x10C;e&#x161;tina</a></li>
+                <li><a href="/omegat-website/de/">Deutsch</a></li>
+                <li><a href="/omegat-website/el/">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
+                <li><a href="/omegat-website/"   >English</a></li>
+                <li><a href="/omegat-website/es/">Espa&#xF1;ol</a></li>
+                <li><a href="/omegat-website/fr/">Fran&#xE7;ais</a></li>
+                <li><a href="/omegat-website/gl/">Galego</a></li>
+                <li><a href="/omegat-website/id/">Bahasa Indonesia</a></li>
+                <li><a href="/omegat-website/ia/">Interlingua</a></li>
+                <li><a href="/omegat-website/it/">Italiano</a></li>
+                <li><a href="/omegat-website/ko/">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
+                <li><a href="/omegat-website/hu/">Magyar</a></li>
+                <li><a href="/omegat-website/ja/">&#x65E5;&#x672C;&#x8A9E;</a></li>
+                <li><a href="/omegat-website/nl/">Nederlands</a></li>
+                <li><a href="/omegat-website/pl/">Polski</a></li>
+                <li><a href="/omegat-website/br/">Portugu&#xEA;s (Brazil)</a></li>
+                <li><a href="/omegat-website/pt/">Portugu&#xEA;s (Portugal)</a></li>
+                <li><a href="/omegat-website/ru/">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
+                <li><a href="/omegat-website/sq/">Shqip</a></li>
+                <li><a href="/omegat-website/sk/">Sloven&#x10D;ina</a></li>
+                <li><a href="/omegat-website/si/">Sloven&#x161;&#x10D;ina</a></li>
+                <li><a href="/omegat-website/hr/">Srpskohrvatski</a></li>
+                <li><a href="/omegat-website/fi/">Suomi</a></li>
+                <li><a href="/omegat-website/sv/">Svenska</a></li>
+                <li><a href="/omegat-website/zh_CN/">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
+                <li><a href="/omegat-website/zh_TW/">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
+              </ul>
+            </li>
+            <!--
+            <li>
+              <a href="#page-download">Download v.<span id="last-version">4.1.1</span></a>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"/></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Action</a>
+                </li>
+                <li>
+                  <a href="#">Another action</a>
+                </li>
+                <li>
+                  <a href="#">Something else here</a>
+                </li>
+                <li role="separator" class="divider"/>
+                <li>
+                  <a href="#">Separated link</a>
+                </li>
+                <li role="separator" class="divider"/>
+                <li>
+                  <a href="#">One more separated link</a>
+                </li>
+              </ul>
+            </li>
+            -->
+          </ul>
+          <!--
+          <form class="navbar-form navbar-left">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search"/>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="#">Link</a>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"/></a>
+              <ul class="dropdown-menu">
+                <li role="separator" class="divider"/>
+                <li>
+                  <a href="#">Separated link</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          -->
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+    </nav>
+
+
+          <div class="jumbotron">
+    <div class="container-fluid">
+      <h1>OmegaT <small>the free translation memory tool</small></h1>
+      <div class="title-buttons">
+        <a class="btn btn-primary" href="download" role="button">Download</a>
+        <a class="btn btn-primary" href="#get-started" role="button">Get Started</a>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid section">
+    <p class="lead"><strong>OmegaT</strong> is a free translation memory application written in
+Java. It is a tool intended for professional translators. It does not
+translate for you! (Software that does this is called "machine
+translation", and you will have to look elsewhere for it.)</p>
+    <div class="row">
+      <div class="col-md-4">
+        <h3>Professional features</h3>
+        <ul>
+          <li>Fuzzy matching</li>
+          <li>Match propagation</li>
+          <li>Simultaneous processing of multiple-file projects</li>
+          <li>Simultaneous use of multiple translation memories</li>
+          <li>User glossaries with recognition of inflected forms</li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h3>Work with more than 30 file formats</h3>
+        <ul>
+          <li>Microsoft Word, Excel, Power
+          <li>XHTML and HTML</li>
+          <li>Open Document Format (LibreOffice, OpenOffice.org)</li>
+          <li>MediaWiki (Wikipedia)</li>
+          <li>Plain text</li>
+          <li>...and around 30 other file formats</li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h3>Powerful tools</h3>
+        <ul>
+          <li>Unicode (UTF-8) support: can be used with non-Latin alphabets</li>
+          <li>Support for right-to-left languages</li>
+          <li>Integral spelling checker</li>
+          <li>Compatible with other translation memory applications (TMX, TTX, TXML, XLIFF, SDLXLIFF)</li>
+          <li>Interface to Google Translate</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid section" id="page-download">
+    <div class="row">&#xA0;</div>
+    <div class="whitebox">
+      <h2>Download</h2>
+      <div class="header-line">
+        <!---->
+      </div>
+      <p class="text-md-center"><strong>OmegaT</strong> is available in many different versions in order to suit a range of user requirements.</p>
+
+
+      <div class="row">
+        <div class="col-md-2">
+          <!-- padding -->
+        </div>
+        <div class="col-md-4 text-md-center">
+          <p>To find the version most suitable for you, follow the link below to the Download Selector.</p>
+        </div>
+        <div class="col-md-4 text-md-center">
+          <p>Alternatively, if you already know which version you wish to download, click on the button to have an overview of the different OmegaT versions available.</p>
+        </div>
+        <div class="col-md-2">
+          <!-- padding -->
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          <!-- padding -->
+        </div>
+        <div class="col-md-4 text-md-center">
+          <p>
+            <a class="btn btn-primary" href="download" role="button">Download Selector</a>
+          </p>
+        </div>
+        <div class="col-md-4 text-md-center">
+          <p>
+            <a class="btn btn-default" href="dl_overview" role="button">Download Overview</a>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="row">&#xA0;</div>
+  <div class="container-fluid versions">
+<ul class="list-group">
+  <li class="list-group-item"><span class="badge">3.6.0_04</span> Standard Version</li>
+  <li class="list-group-item"><span class="badge">4.1.1_1</span> Latest Version</li>
+</ul>
+  </div>
+  </div>
+  <div class="container-fluid section">
+    <h2>Requirements</h2>
+    <div class="header-line">
+      <!---->
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h3>System Requirements</h3>
+        <p>OmegaT will run on any system on which the JRE (Java Runtime
+Environment) has been or can be installed. The JRE is now supplied with
+OmegaT and need not be obtained separately. OmegaT has been successfully
+installed on Windows (all versions from 98 onwards), Macintosh OS X and
+Linux.</p>
+        <p>Files in Microsoft Office XML format can be translated directly in
+OmegaT. Files in older MS Word, Excel and Powerpoint formats can be
+translated following conversion to the equivalent current Microsoft
+Office formats, or alternatively to the Office Open XML format, which can
+be done in OpenOffice.org or LibreOffice (also free). To obtain
+OpenOffice.org or LibreOffice, follow the link from "Third-party
+software" button on the left.</p>
+      </div>
+      <div class="col-md-6">
+        <h3>User Requirements</h3>
+        <p>OmegaT is not particularly difficult to install or use, but it
+    does require a willingness to read and follow the instructions. If
+    you have a natural aversion to reading instructions, and your
+    approach to new software is to click on every button you see until
+    something resembling the desired effect occurs, then OmegaT is
+    probably not suitable for you.</p>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid section" id="page-omegat-and-you">
+    <h2>The OmegaT project and you</h2>
+    <div class="header-line">
+      <!---->
+    </div>
+    <p>OmegaT isn't just a product; it's an exciting project, and you can be
+part of it.</p>
+    <p>OmegaT is free software. That means that users like you are free to
+download and use it with very little in the way of restrictions. You are
+also free to copy it and pass it on to other people.</p>
+    <p>OmegaT is open-source software. That means that if you feel so
+inclined, you may modify OmegaT to suit your own requirements. For
+advocates of open-source software, this freedom is even more important
+than the exemption from having to pay anything.</p>
+    <p>The OmegaT project would benefit from greater support from volunteers
+in almost all areas. Although many users are aware of this, their
+reaction is often "But I can't program!". Programming is certainly the
+most important function, and without programming, there is no program.
+But programming isn't the only job needing to be done. Below is a list of
+areas for which further volunteers would be more than welcome!</p>
+    <div class="row project">
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-pencil">
+          <!---->
+        </span>
+        <h3>Documentation authoring</h3>
+        <p>Documentation is very important. Many of you reading this will be
+    translators who have translated a lot of user documentation. Have you
+    considered writing some user documentation yourself? It's a real
+    eye-opener!</p>
+      </div>
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-globe">
+          <!---->
+        </span>
+        <h3>Localization</h3>
+        <p>Thanks to the work of translators in the past, OmegaT's user
+    interface and/or Help texts have been translated into several
+    languages. That means there are only a few thousand left! Localizing
+    OmegaT into other languages is also an ongoing task, since new
+    features and functions are being added all the time. See the
+    <a href="#">Localizing OmegaT HowTo</a> for details of what is involved in
+    localizing/translating OmegaT.</p>
+      </div>
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-wrench">
+          <!---->
+        </span>
+        <h3>Testing</h3>
+        <p>One of the most useful things OmegaT users can do is... to use
+    OmegaT. And when they find things that don't work, or deficiencies in
+    the documentation, to tell us about them.</p>
+      </div>
+    </div>
+    <div class="row project">
+      <div class="col-sm-6">
+        <span class="glyphicon glyphicon-bullhorn">
+          <!---->
+        </span>
+        <h3>Publicity</h3>
+        <p>Have you ever written an article for your professional
+    association's journal? If not, why not write an article on using
+    OmegaT?</p>
+      </div>
+      <div class="col-sm-6">
+        <span class="glyphicon glyphicon-piggy-bank">
+          <!---->
+        </span>
+        <h3>Donations</h3>
+        <p>If you have found OmegaT useful and would like to express your
+    gratitude by making a donation, go to the OmegaT SourceForge page and
+    click on "Donate".</p>
+      </div>
+    </div>
+    <div class="row project">
+      <div class="col-sm-6">
+        <span class="glyphicon glyphicon-cog">
+          <!---->
+        </span>
+        <h3>Programming (Java)</h3>
+        <p>OmegaT is written in Java. If you're a programmer and you happen
+    to know Java, please check the documentation in the source code under
+    /docs_devel for information on how to get started.</p>
+      </div>
+      <div class="col-sm-6">
+        <span class="glyphicon glyphicon-cog">
+          <!---->
+        </span>
+        <h3>Programming (not Java)</h3>
+        <p>If you can program in another language, you can write code to
+    support the core application. Such auxiliary code has already been
+    written in Star Basic and Tcl/Tk, for instance.</p>
+      </div>
+      <div class="row project">
+        <div class="col-sm-12">
+          <p>But I can't program at all, I hear you say. Well, have you
+    considered learning? If you are already reasonably familiar with
+    computers in general and choose a straightforward scripting language
+    like Tcl/Tk, you could teach yourself enough to be able to write
+    simple but useful scripts within just a couple of weeks. Continuing
+    Professional Development is the current buzzword!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+    <footer class="container-fluid text-center">
+  <a href="#page" title="To Top">
+    <span class="glyphicon glyphicon-chevron-up"/>
+  </a>
+  <div class="container-fluid">
+          <div class="row">
+          <div class="col-sm-2 social-links">
+    <h4>Connect</h4>
+    <ul>
+      <li><a href="https://sourceforge.net/projects/omegat/"><img       src="/omegat-website/img/sourceforge.svg" height="24"/> Sourceforge</a></li>
+      <li><a href="github.com/omegat-org/"><img                         src="/omegat-website/img/github.svg" height="24"/> Github</a></li>
+      <li><a href="https://twitter.com/OmegaTOfficial"><img             src="/omegat-website/img/twitter.svg" height="24"/> Twitter</a></li>
+      <li><a href="https://www.facebook.com/OmegaTOfficial"><img        src="/omegat-website/img/facebook.svg" height="24"/> Facebook</a></li>
+    </ul>
+  </div>
+  </div>
+  </div>
+  <p>Copyright &#xA9; 2017 - <a href="/omegat-website">omegat.org</a></p>
+</footer>
+
+
+  </body>
+
+</html>
 
