--- a/dl_overview.html
+++ b/dl_overview.html
@@ -50,9 +50,8 @@
             <li><a href="download">Download</a></li>
           </ul>
           <ul class="nav navbar-nav">
-            <li><a href="contact">Contact</a></li>
             <li><a href="resources">Resources</a></li>
-            <li><a href="about">About</a></li>
+            <li><a href="documentation">Documentation</a></li>
           </ul>
           <ul class="nav navbar-nav">
             <li class="dropdown">
@@ -521,7 +520,7 @@ space on your hard drive. In this case, do not select the Default version; selec
     <p>The /trunk (alpha) version reflects the very latest state of development. It
     is recommended for serious developers and testers only. It can also be obtained
     using the subversion command:</p>
-    <p>svn checkout svn://svn.code.sf.net/p/omegat/svn/trunk omegat-svn</p>
+    <p><kbd>svn checkout svn://svn.code.sf.net/p/omegat/svn/trunk omegat-svn</kbd></p>
 </div>
 
 <div id="popover_content_nightly" style="display:none">
@@ -547,17 +546,37 @@ space on your hard drive. In this case, do not select the Default version; selec
     <span class="glyphicon glyphicon-chevron-up"/>
   </a>
   <div class="container-fluid">
-          <div class="row">
-          <div class="col-sm-2 social-links">
-    <h4>Connect</h4>
-    <ul>
-      <li><a href="https://sourceforge.net/projects/omegat/"><img       src="/omegat-website/img/sourceforge.svg" height="24"/> Sourceforge</a></li>
-      <li><a href="github.com/omegat-org/"><img                         src="/omegat-website/img/github.svg" height="24"/> Github</a></li>
-      <li><a href="https://twitter.com/OmegaTOfficial"><img             src="/omegat-website/img/twitter.svg" height="24"/> Twitter</a></li>
-      <li><a href="https://www.facebook.com/OmegaTOfficial"><img        src="/omegat-website/img/facebook.svg" height="24"/> Facebook</a></li>
-    </ul>
-  </div>
-  </div>
+    <div class="row">
+      <div class="col-sm-2 footer-column">
+        <h4>Connect</h4>
+        <ul>
+          <li>
+            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24"/> Sourceforge</a>
+          </li>
+          <li>
+            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24"/> Github</a>
+          </li>
+          <li>
+            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24"/> Twitter</a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24"/> Facebook</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-sm-8"><!-- padding --></div>
+      <div class="col-sm-2 footer-column">
+        <h4>The OmegaT Project</h4>
+        <ul>
+          <li>
+          <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact</a>
+          </li>
+          <li>
+            <a href="about"><span class="glyphicon glyphicon-question-sign"></span> About</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
   <p>Copyright &#xA9; 2017 - <a href="/omegat-website">omegat.org</a></p>
 </footer>
