--- a/fr/contact.html
+++ b/fr/contact.html
@@ -47,12 +47,11 @@
         </div>
         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="download">Télécharger</a></li>
+            <li><a href="download">Téléchargement</a></li>
           </ul>
           <ul class="nav navbar-nav">
-            <li><a href="contact">Contact</a></li>
             <li><a href="resources">Ressources</a></li>
-            <li><a href="about">À propos</a></li>
+            <li><a href="documentation">Documentation</a></li>
           </ul>
           <ul class="nav navbar-nav">
             <li class="dropdown">
@@ -162,17 +161,37 @@ and/or mailing lists.</p>
     <span class="glyphicon glyphicon-chevron-up"/>
   </a>
   <div class="container-fluid">
-          <div class="row">
-          <div class="col-sm-2 social-links">
-    <h4>Réseaux sociaux</h4>
-    <ul>
-      <li><a href="https://sourceforge.net/projects/omegat/"><img       src="/omegat-website/img/sourceforge.svg" height="24"/> Sourceforge</a></li>
-      <li><a href="github.com/omegat-org/"><img                         src="/omegat-website/img/github.svg" height="24"/> Github</a></li>
-      <li><a href="https://twitter.com/OmegaTOfficial"><img             src="/omegat-website/img/twitter.svg" height="24"/> Twitter</a></li>
-      <li><a href="https://www.facebook.com/OmegaTOfficial"><img        src="/omegat-website/img/facebook.svg" height="24"/> Facebook</a></li>
-    </ul>
-  </div>
-  </div>
+    <div class="row">
+      <div class="col-sm-2 footer-column">
+        <h4>Réseaux sociaux</h4>
+        <ul>
+          <li>
+            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24"/> Sourceforge</a>
+          </li>
+          <li>
+            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24"/> Github</a>
+          </li>
+          <li>
+            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24"/> Twitter</a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24"/> Facebook</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-sm-8"><!-- padding --></div>
+      <div class="col-sm-2 footer-column">
+        <h4>Le projet OmegaT</h4>
+        <ul>
+          <li>
+          <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact</a>
+          </li>
+          <li>
+            <a href="about"><span class="glyphicon glyphicon-question-sign"></span> À propos</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
   <p>Copyright &#xA9; 2017 - <a href="/omegat-website/fr">omegat.org</a></p>
 </footer>
